--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 					<ul class="user-navigation">
-						<li class="login-link">Вход</li>
+						<li class="login-link"><a href="#">Вход</a></li>
 					</ul>
 				</div>
 			</div>
@@ -69,11 +69,13 @@
 
 		<section class="gallery">
 			<h2>Фотогалерея</h2>
-			<figure class="gallery-content">
-				<a href="#"><img src="img/index/studio-photo.jpg" alt="Интерьер"></a>
-			</figure>
-			<button class="button gallery-button gallery-button-back">Назад</button>
-			<button class="button gallery-button gallery-button-back">Вперед</button>
+			<div class="gallery-container">
+				<figure class="gallery-content">
+					<a href="#"><img src="img/index/studio-photo.jpg" alt="Интерьер"></a>
+				</figure>
+				<button class="button gallery-button gallery-button-back" disabled>Назад</button>
+				<button class="button gallery-button gallery-button-next">Вперед</button>
+			</div>
 		</section>
 	</div>	
 	<div class="index-columns">
