--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
       	<button class="modal-close" type="button" title="Закрыть">Закрыть</button>
 	</section>
 
-	<section class="modal modal-map">
+	<section class="modal modal-map visually-hidden">
 		<h2 class="visually-hidden">Как до нас добраться</h2>
-		<p><img src="../img/index/map.jpg" width="780" height="560" alt="Офис компании"></p>
+		<p><img src="../img/index/map.png" width="780" height="560" alt="Офис компании"></p>
 		<button class="modal-close" type="button">Закрыть</span>
 	</section>
 
