--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="http://necolas.github.io/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
+	
 </head>
 <body>
 
@@ -91,7 +92,7 @@
 				пн-пт: с 10:00 до 22:00<br>
 				сб-вс: с 10:00 до 19:00
 			</p> 
-			<a class="button" href="map.html">Как проехать</a>
+			<a class="button map-link" href="map.html">Как проехать</a>
 			<a class="button" href="contacts.html">Обратная связь</a>
 		</section>
 
@@ -148,7 +149,6 @@
 	</footer>
 
 	<section class="modal modal-login">
-		
         <h2 class="modal-content-title">Личный кабинет</h2>
         <p class="modal-description">Введите свой логин и пароль</p>
         <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
@@ -172,11 +172,11 @@
       	<button class="modal-close" type="button" title="Закрыть">Закрыть</button>
 	</section>
 
-	<section class="modal modal-map visually-hidden">
+	<section class="modal modal-map">
 		<h2 class="visually-hidden">Как до нас добраться</h2>
-		<p><img src="../img/index/map.png" width="780" height="560" alt="Офис компании"></p>
+		<p><img src="img/index/map.png" width="780" height="560" alt="Офис компании"></p>
 		<button class="modal-close" type="button">Закрыть</span>
 	</section>
-
+<script src="script/script.js"></script>
 </body>
 </html>
